--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Model::XMLRPC.
 
+0.04  Wed Jul 04 14:30:27 2007
+    - Fixed config options passed in via ConfigLoader.
 0.03  Thu Aug 31 01:46:14 2006
 	- Fixed README file.
 0.02  Wed Aug 30 21:59:42 2006
